Release candidate of library